# Updated-Helix-MP3-Decoder-Support-for-ESP-IDF-XTENSA-Platform

./: README.md
libhelix-mp3/: CMakeLists.txt  assembly.h
libhelix-mp3/utils/: helix_memory.c
